# goit-pythonweb-hw-08

./: main.py  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: b01d9a3a8d0f_init_project.py  f3ce5a24518e_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
src/services/: contacts.py
